Modified for Demo

--- a/index2.html
+++ b/index2.html
@@ -46,34 +46,34 @@
 		            <!-- Swiper slides -->
 		            <div class="swiper-wrapper">
 						<div class="swiper-slide" data-hash="slide1" style="background-image:url(img/exp/gradient-pink.jpg)">
-							<h4 data-swiper-parallax="-30%">40</h4>
-							<h3 data-swiper-parallax="-15%">LIFESTYLE 002</h3>
-							<img data-swiper-parallax="-50%" src="img/exp/shoe-lifestyle.png" alt="" />
+							<h4><span data-swiper-parallax="-50%">40</span></h4>
+							<h3 data-swiper-parallax="-25%">LIFESTYLE 002</h3>
+							<img data-swiper-parallax="-100%" src="img/exp/shoe-lifestyle.png" alt="" />
 						</div>
 		                <div class="swiper-slide" data-hash="slide1" style="background-image:url(img/exp/gradient-lightblue.jpg)">
-		                    <h4 data-swiper-parallax="-30%">47</h4>
-		                    <h3 data-swiper-parallax="-15%">AIR MAX 2015</h3>
-		                    <img src="img/exp/shoe-running.png" alt="" data-swiper-parallax="-50%" />
+		                    <h4><span data-swiper-parallax="-50%">47</span></h4>
+		                    <h3 data-swiper-parallax="-25%">AIR MAX 2015</h3>
+		                    <img src="img/exp/shoe-running.png" alt="" data-swiper-parallax="-100%" />
 		                </div>
 		                <div class="swiper-slide" data-hash="slide1" style="background-image:url(img/exp/gradient-yellow.jpg)">
-		                    <h4 data-swiper-parallax="-30%">60</h4>
-		                    <h3 data-swiper-parallax="-15%">AIR MIN 2016</h3>
-		                    <img data-swiper-parallax="-50%" src="img/exp/shoe-soccer.png" alt="" />
+		                    <h4><span data-swiper-parallax="-50%">60</span></h4>
+		                    <h3 data-swiper-parallax="-25%">AIR MIN 2016</h3>
+		                    <img data-swiper-parallax="-100%" src="img/exp/shoe-soccer.png" alt="" />
 		                </div>
 		                <div class="swiper-slide" data-hash="slide1" style="background-image:url(img/exp/gradient-pink.jpg)">
-		                    <h4 data-swiper-parallax="-30%">54</h4>
-		                    <h3 data-swiper-parallax="-15%">WINTER 1020</h3>
-		                    <img data-swiper-parallax="-50%" src="img/exp/shoe-tennis.png" alt="" />
+		                    <h4><span data-swiper-parallax="-50%">54</span></h4>
+		                    <h3 data-swiper-parallax="-25%">WINTER 1020</h3>
+		                    <img data-swiper-parallax="-100%" src="img/exp/shoe-tennis.png" alt="" />
 		                </div>
 		                <div class="swiper-slide" data-hash="slide1" style="background-image:url(img/exp/gradient-gray.jpg)">
-		                    <h4 data-swiper-parallax="-30%">52</h4>
-		                    <h3 data-swiper-parallax="-15%">AIR MAX 2015</h3>
-		                    <img data-swiper-parallax="-50%" src="img/exp/shoe-fashion.png" alt="" />
+		                    <h4><span data-swiper-parallax="-50%">52</span></h4>
+		                    <h3 data-swiper-parallax="-25%">AIR MAX 2015</h3>
+		                    <img data-swiper-parallax="-100%" src="img/exp/shoe-fashion.png" alt="" />
 		                </div>
 		                <div class="swiper-slide" data-hash="slide1" style="background-image:url(img/exp/gradient-blue.jpg)">
-		                    <h4 data-swiper-parallax="-30%">35</h4>
-		                    <h3 data-swiper-parallax="-15%">MINT 1205</h3>
-		                    <img data-swiper-parallax="-50%" src="img/exp/shoe-cricket.png" alt="" />
+		                    <h4><span data-swiper-parallax="-50%">35</span></h4>
+		                    <h3 data-swiper-parallax="-25%">MINT 1205</h3>
+		                    <img data-swiper-parallax="-100%" src="img/exp/shoe-cricket.png" alt="" />
 		                </div>
 		            </div>
 		            <div class="swiper-pagination"></div>
@@ -148,9 +148,9 @@ $(document).ready(function() {
     galleryThumbs.params.control = galleryTop;
 
 	setTimeout(function(){
-		$('.gallery-top .swiper-slide-active img').css('transform', 'translateX(9.4%)');
+		$('.gallery-top .swiper-slide-active img').css('transform', 'translateX(18%)');
 		$('.gallery-top .swiper-slide-active h3').css('transform', 'translateX(2.8%)');
-		$('.gallery-top .swiper-slide-active h4').css('transform', 'translateX(5.6%)');
+		$('.gallery-top .swiper-slide-active h4 span').css('transform', 'translateX(9.4%)');
 
 		//galleryTop.slideTo(5);
 	}, 300);
