finetunes in all demo

--- a/demo3.html
+++ b/demo3.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="style/h5bp.css">
 	<link rel="stylesheet" href="style/box.css">
 	<link rel="stylesheet" href="style/swiper.css">
-	<link rel="stylesheet" href="style/style3.css">
+	<link rel="stylesheet" href="style/demo3.css">
 	<script src="js/jquery-1.10.1.min.js"></script>
 	<script src="js/swiper.jquery.min.js"></script>
 </head>
@@ -17,7 +17,7 @@
 
 		<div class="appContent">
 			<header>
-				<img src="img/cart/header.jpg" alt="">
+				<img src="img/demo3/header.jpg" alt="">
 			</header>
 			<div class="sliderContainer">
 				<div class="swiper-container">
@@ -28,7 +28,7 @@
 							<div class="slider-bag">
 								<h2><small>Party</small>Burger</h2>
 								<figure>
-									<img src="img/cart/anim-burger.gif" alt="" />
+									<img src="img/demo3/anim-burger.gif" alt="" />
 								</figure>
 								<a href="#" class="btnBuy">Buy Now</a>
 								<div class="cartadded" style="display: none;">
@@ -41,7 +41,7 @@
 							<div class="slider-bag">
 								<h2><small>Magic</small>Fry</h2>
 								<figure>
-									<img src="img/cart/anim-chips.gif" alt="" />
+									<img src="img/demo3/anim-chips.gif" alt="" />
 								</figure>
 								<a href="#" class="btnBuy">Buy Now</a>
 								<div class="cartadded" style="display: none;">
@@ -54,7 +54,7 @@
 							<div class="slider-bag">
 								<h2><small>Freshy</small>Popsicle</h2>
 								<figure>
-									<img src="img/cart/anim-ice.gif" alt="" />
+									<img src="img/demo3/anim-ice.gif" alt="" />
 								</figure>
 								<a href="#" class="btnBuy">Buy Now</a>
 								<div class="cartadded" style="display: none;">
@@ -90,9 +90,9 @@
 		<h1>Urban Slider</h1>
 		<p>With Content Transform</p>
 		<nav class="demoLinks">
-			<a href="index.html">Demo 1</a>
-			<a href="index2.html">Demo 2</a>
-			<a href="index3.html" class="active">Demo 3</a>
+			<a href="demo1.html">Demo 1</a>
+			<a href="demo2.html">Demo 2</a>
+			<a href="demo3.html" class="active">Demo 3</a>
 		</nav>
 	</div>
 </body>
