--- a/demo1.html
+++ b/demo1.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="style/h5bp.css">
 	<link rel="stylesheet" href="style/box.css">
 	<link rel="stylesheet" href="style/swiper.css">
-	<link rel="stylesheet" href="style/style1.css">
+	<link rel="stylesheet" href="style/demo1.css">
 	<script src="js/jquery-1.10.1.min.js"></script>
 	<script src="js/swiper.jquery.min.js"></script>
 </head>
@@ -69,7 +69,7 @@
 				        <div class="swiper-slide ss1">
 							<div class="slider-content">
 								<figure data-swiper-parallax="-100%">
-									<img src="img/slider/1.png" alt="" />
+									<img src="img/demo1/1.png" alt="" />
 								</figure>
 								<div class="sliderContent">
 									<h2>Air Max 1</h2>
@@ -81,7 +81,7 @@
 				        <div class="swiper-slide ss2">
 							<div class="slider-content">
 								<figure data-swiper-parallax="-100%">
-									<img src="img/slider/2.png" alt="" />
+									<img src="img/demo1/2.png" alt="" />
 								</figure>
 								<div class="sliderContent">
 									<h2>Air Max 2</h2>
@@ -93,7 +93,7 @@
 				        <div class="swiper-slide ss3">
 							<div class="slider-content">
 								<figure data-swiper-parallax="-100%">
-									<img src="img/slider/3.png" alt="" />
+									<img src="img/demo1/3.png" alt="" />
 								</figure>
 								<div class="sliderContent">
 									<h2>Air Max 3</h2>
@@ -129,9 +129,9 @@
 		<h1>Urban Slider</h1>
 		<p>With parallax background</p>
 		<nav class="demoLinks">
-			<a href="index.html" class="active">Demo 1</a>
-			<a href="index2.html">Demo 2</a>
-			<a href="index3.html">Demo 3</a>
+			<a href="demo1.html" class="active">Demo 1</a>
+			<a href="demo2.html">Demo 2</a>
+			<a href="demo3.html">Demo 3</a>
 		</nav>
 	</div>
 </body>
