--- a/demo2.html
+++ b/demo2.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="style/h5bp.css">
 	<link rel="stylesheet" href="style/box.css">
 	<link rel="stylesheet" href="style/swiper.css">
-	<link rel="stylesheet" href="style/style2.css">
+	<link rel="stylesheet" href="style/demo2.css">
 	<script src="js/jquery-1.10.1.min.js"></script>
 	<script src="js/swiper.jquery.min.js"></script>
 </head>
@@ -21,7 +21,7 @@
 
 				<!-- Slider main container -->
 				<figure class="header">
-		            <img src="img/exp/mobile-header.jpg" alt="" />
+		            <img src="img/demo2/mobile-header.jpg" alt="" />
 		        </figure>
 
 		        <!-- Swiper -->
@@ -45,35 +45,35 @@
 
 		            <!-- Swiper slides -->
 		            <div class="swiper-wrapper">
-						<div class="swiper-slide" data-hash="slide1" style="background-image:url(img/exp/gradient-pink.jpg)">
+						<div class="swiper-slide" data-hash="slide1" style="background-image:url(img/demo2/gradient-pink.jpg)">
 							<h4><span data-swiper-parallax="-50%">40</span></h4>
 							<h3 data-swiper-parallax="-25%">LIFESTYLE 002</h3>
-							<img data-swiper-parallax="-100%" src="img/exp/shoe-lifestyle.png" alt="" />
+							<img data-swiper-parallax="-100%" src="img/demo2/shoe-lifestyle.png" alt="" />
 						</div>
-		                <div class="swiper-slide" data-hash="slide1" style="background-image:url(img/exp/gradient-lightblue.jpg)">
+		                <div class="swiper-slide" data-hash="slide1" style="background-image:url(img/demo2/gradient-lightblue.jpg)">
 		                    <h4><span data-swiper-parallax="-50%">47</span></h4>
 		                    <h3 data-swiper-parallax="-25%">AIR MAX 2015</h3>
-		                    <img src="img/exp/shoe-running.png" alt="" data-swiper-parallax="-100%" />
+		                    <img src="img/demo2/shoe-running.png" alt="" data-swiper-parallax="-100%" />
 		                </div>
-		                <div class="swiper-slide" data-hash="slide1" style="background-image:url(img/exp/gradient-yellow.jpg)">
+		                <div class="swiper-slide" data-hash="slide1" style="background-image:url(img/demo2/gradient-yellow.jpg)">
 		                    <h4><span data-swiper-parallax="-50%">60</span></h4>
 		                    <h3 data-swiper-parallax="-25%">AIR MIN 2016</h3>
-		                    <img data-swiper-parallax="-100%" src="img/exp/shoe-soccer.png" alt="" />
+		                    <img data-swiper-parallax="-100%" src="img/demo2/shoe-soccer.png" alt="" />
 		                </div>
-		                <div class="swiper-slide" data-hash="slide1" style="background-image:url(img/exp/gradient-pink.jpg)">
+		                <div class="swiper-slide" data-hash="slide1" style="background-image:url(img/demo2/gradient-pink.jpg)">
 		                    <h4><span data-swiper-parallax="-50%">54</span></h4>
 		                    <h3 data-swiper-parallax="-25%">WINTER 1020</h3>
-		                    <img data-swiper-parallax="-100%" src="img/exp/shoe-tennis.png" alt="" />
+		                    <img data-swiper-parallax="-100%" src="img/demo2/shoe-tennis.png" alt="" />
 		                </div>
-		                <div class="swiper-slide" data-hash="slide1" style="background-image:url(img/exp/gradient-gray.jpg)">
+		                <div class="swiper-slide" data-hash="slide1" style="background-image:url(img/demo2/gradient-gray.jpg)">
 		                    <h4><span data-swiper-parallax="-50%">52</span></h4>
 		                    <h3 data-swiper-parallax="-25%">AIR MAX 2015</h3>
-		                    <img data-swiper-parallax="-100%" src="img/exp/shoe-fashion.png" alt="" />
+		                    <img data-swiper-parallax="-100%" src="img/demo2/shoe-fashion.png" alt="" />
 		                </div>
-		                <div class="swiper-slide" data-hash="slide1" style="background-image:url(img/exp/gradient-blue.jpg)">
+		                <div class="swiper-slide" data-hash="slide1" style="background-image:url(img/demo2/gradient-blue.jpg)">
 		                    <h4><span data-swiper-parallax="-50%">35</span></h4>
 		                    <h3 data-swiper-parallax="-25%">MINT 1205</h3>
-		                    <img data-swiper-parallax="-100%" src="img/exp/shoe-cricket.png" alt="" />
+		                    <img data-swiper-parallax="-100%" src="img/demo2/shoe-cricket.png" alt="" />
 		                </div>
 		            </div>
 		            <div class="swiper-pagination"></div>
@@ -102,9 +102,9 @@
 		<h1>Urban Slider</h1>
 		<p>Interlinked Slider</p>
 		<nav class="demoLinks">
-			<a href="index.html">Demo 1</a>
-			<a href="index2.html" class="active">Demo 2</a>
-			<a href="index3.html">Demo 3</a>
+			<a href="demo1.html">Demo 1</a>
+			<a href="demo2.html" class="active">Demo 2</a>
+			<a href="demo3.html">Demo 3</a>
 		</nav>
 	</div>
 </body>
