--- a/demo2.html
+++ b/demo2.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Urban Slider - Interlinked Slider</title>
 	<meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1,user-scalable=no" />
+	<meta name="description" content="Demo 2 of Urban slider has interlinked slider using swiper js. Product image and price have nice parallax effect in slide change." />
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<link rel="icon" href="./favicon.png">
 	<link rel="stylesheet" href="style/h5bp.css">
 	<link rel="stylesheet" href="style/box.css">
@@ -14,20 +16,17 @@
 </head>
 <body>
 	<div id="container" class="appContainer">
-
 		<div class="appContent">
 
 			<div class="sliderContainer">
 
-				<!-- Slider main container -->
+				<!-- Slider header -->
 				<figure class="header">
 		            <img src="img/demo2/mobile-header.jpg" alt="" />
 		        </figure>
 
-		        <!-- Swiper -->
+		        <!-- Title Slider -->
 		        <div class="swiper-container gallery-text">
-
-		            <!-- Swiper slides -->
 		            <div class="swiper-wrapper">
 		                <div class="swiper-slide">Running</div>
 		                <div class="swiper-slide">Soccer</div>
@@ -36,57 +35,67 @@
 		                <div class="swiper-slide">Cricket</div>
 		                <div class="swiper-slide">Lifestyle</div>
 		            </div>
-
 		        </div>
 
-
-		        <!-- Swiper -->
+		        <!-- Product Slider -->
 		        <div class="swiper-container gallery-top">
-
-		            <!-- Swiper slides -->
 		            <div class="swiper-wrapper">
+
+						<!-- Slide 1 -->
 						<div class="swiper-slide" data-hash="slide1" style="background-image:url(img/demo2/gradient-pink.jpg)">
 							<h4><span data-swiper-parallax="-50%">40</span></h4>
 							<h3 data-swiper-parallax="-25%">LIFESTYLE 002</h3>
 							<img data-swiper-parallax="-100%" src="img/demo2/shoe-lifestyle.png" alt="" />
 						</div>
+
+						<!-- Slide 2 -->
 		                <div class="swiper-slide" data-hash="slide1" style="background-image:url(img/demo2/gradient-lightblue.jpg)">
 		                    <h4><span data-swiper-parallax="-50%">47</span></h4>
 		                    <h3 data-swiper-parallax="-25%">AIR MAX 2015</h3>
 		                    <img src="img/demo2/shoe-running.png" alt="" data-swiper-parallax="-100%" />
 		                </div>
+
+						<!-- Slide 3 -->
 		                <div class="swiper-slide" data-hash="slide1" style="background-image:url(img/demo2/gradient-yellow.jpg)">
 		                    <h4><span data-swiper-parallax="-50%">60</span></h4>
 		                    <h3 data-swiper-parallax="-25%">AIR MIN 2016</h3>
 		                    <img data-swiper-parallax="-100%" src="img/demo2/shoe-soccer.png" alt="" />
 		                </div>
+
+						<!-- Slide 4 -->
 		                <div class="swiper-slide" data-hash="slide1" style="background-image:url(img/demo2/gradient-pink.jpg)">
 		                    <h4><span data-swiper-parallax="-50%">54</span></h4>
 		                    <h3 data-swiper-parallax="-25%">WINTER 1020</h3>
 		                    <img data-swiper-parallax="-100%" src="img/demo2/shoe-tennis.png" alt="" />
 		                </div>
+
+						<!-- Slide 5 -->
 		                <div class="swiper-slide" data-hash="slide1" style="background-image:url(img/demo2/gradient-gray.jpg)">
 		                    <h4><span data-swiper-parallax="-50%">52</span></h4>
 		                    <h3 data-swiper-parallax="-25%">AIR MAX 2015</h3>
 		                    <img data-swiper-parallax="-100%" src="img/demo2/shoe-fashion.png" alt="" />
 		                </div>
+
+						<!-- Slide 6 -->
 		                <div class="swiper-slide" data-hash="slide1" style="background-image:url(img/demo2/gradient-blue.jpg)">
 		                    <h4><span data-swiper-parallax="-50%">35</span></h4>
 		                    <h3 data-swiper-parallax="-25%">MINT 1205</h3>
 		                    <img data-swiper-parallax="-100%" src="img/demo2/shoe-cricket.png" alt="" />
 		                </div>
 		            </div>
+
+					<!-- pagination -->
 		            <div class="swiper-pagination"></div>
-
 		        </div>
-
 			</div>
 
 		</div>
+	</div><!-- #container -->
 
-	</div>
-
+	<!-- Mobile Menu icon -->
 	<a class="mobile-menu-link">Menu</a>
+
+	<!-- KRDS Box Information -->
 	<div class="appInfo">
 		<nav class="boxActions">
 			<a href="https://krdsbox.github.io/gooey-loader/" id="previous_box" title="Previous box" target="_blank">
