--- a/demo3.html
+++ b/demo3.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Urban Slider - With Content Transform</title>
 	<meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1,user-scalable=no" />
+	<meta name="description" content="Demo 3 of Urban slider has custom effects using swiper js." />
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<link rel="icon" href="./favicon.png">
 	<link rel="stylesheet" href="style/h5bp.css">
 	<link rel="stylesheet" href="style/box.css">
@@ -14,16 +16,19 @@
 </head>
 <body class="style-3">
 	<div id="container" class="appContainer">
-
 		<div class="appContent">
+
+			<!-- Slider header -->
 			<header>
 				<img src="img/demo3/header.jpg" alt="">
 			</header>
+
+			<!-- Slider -->
 			<div class="sliderContainer">
 				<div class="swiper-container">
-				    <!-- Additional required wrapper -->
 				    <div class="swiper-wrapper">
-				        <!-- Slides -->
+
+						<!-- Slide 1 -->
 				        <div class="swiper-slide">
 							<div class="slider-bag">
 								<h2><small>Party</small>Burger</h2>
@@ -37,6 +42,7 @@
 							</div>
 				        </div>
 
+						<!-- Slide 2 -->
 				        <div class="swiper-slide">
 							<div class="slider-bag">
 								<h2><small>Magic</small>Fry</h2>
@@ -50,6 +56,7 @@
 							</div>
 						</div>
 
+						<!-- Slide 3 -->
 				        <div class="swiper-slide">
 							<div class="slider-bag">
 								<h2><small>Freshy</small>Popsicle</h2>
@@ -64,17 +71,19 @@
 						</div>
 
 				    </div>
-				    <!-- If we need pagination -->
+
+				    <!-- pagination -->
 				    <div class="swiper-pagination"></div>
 				</div>
-
 			</div>
 
 		</div>
+	</div><!-- #container -->
 
-	</div>
-
+	<!-- Mobile Menu icon -->
 	<a class="mobile-menu-link">Menu</a>
+
+	<!-- KRDS Box Information -->
 	<div class="appInfo">
 		<nav class="boxActions">
 			<a href="https://krdsbox.github.io/gooey-loader/" id="previous_box" title="Previous box" target="_blank">
