add meta og details

--- a/demo2.html
+++ b/demo2.html
@@ -13,6 +13,12 @@
 	<link rel="stylesheet" href="style/demo2.css">
 	<script src="js/jquery-1.10.1.min.js"></script>
 	<script src="js/swiper.jquery.min.js"></script>
+
+	<!-- Meta OG Details -->
+	<meta property="og:title" content="Urban Slider - Interlinked Slider"/>
+	<meta property="og:description" content="Demo 2 of Urban slider has interlinked slider using swiper js. Product image and price have nice parallax effect in slide change.">
+	<meta property="og:image" content="img/share/demo2.jpg" />
+	<meta property="og:url" content="https://naren-ui.github.io/urban-slider/demo2.html" />
 </head>
 <body>
 	<div id="container" class="appContainer">
