--- a/demo1.html
+++ b/demo1.html
@@ -13,6 +13,12 @@
 	<link rel="stylesheet" href="style/demo1.css">
 	<script src="js/jquery-1.10.1.min.js"></script>
 	<script src="js/swiper.jquery.min.js"></script>
+
+	<!-- Meta OG Details -->
+	<meta property="og:title" content="Urban Slider - Parallax Background"/>
+	<meta property="og:description" content="Demo 1 of Urban slider has the skewed background in the background image using swiper js. These skewed elements have nice parallax effect in slide change.">
+    <meta property="og:image" content="img/share/demo1.jpg" />
+    <meta property="og:url" content="https://naren-ui.github.io/urban-slider/demo1.html" />
 </head>
 <body>
 	<div id="container" class="appContainer">
