--- a/demo3.html
+++ b/demo3.html
@@ -13,6 +13,12 @@
 	<link rel="stylesheet" href="style/demo3.css">
 	<script src="js/jquery-1.10.1.min.js"></script>
 	<script src="js/swiper.jquery.min.js"></script>
+
+	<!-- Meta OG Details -->
+	<meta property="og:title" content="Urban Slider - With Content Transform"/>
+	<meta property="og:description" content="Demo 3 of Urban slider has custom effects using swiper js.">
+	<meta property="og:image" content="img/share/demo3.jpg" />
+	<meta property="og:url" content="https://naren-ui.github.io/urban-slider/demo3.html" />
 </head>
 <body class="style-3">
 	<div id="container" class="appContainer">
