add meta og details #1

--- a/demo2.html
+++ b/demo2.html
@@ -17,7 +17,7 @@
 	<!-- Meta OG Details -->
 	<meta property="og:title" content="Urban Slider - Interlinked Slider"/>
 	<meta property="og:description" content="Demo 2 of Urban slider has interlinked slider using swiper js. Product image and price have nice parallax effect in slide change.">
-	<meta property="og:image" content="img/share/demo2.jpg" />
+	<meta property="og:image" content="https://naren-ui.github.io/urban-slider/img/share/demo2.jpg" />
 	<meta property="og:url" content="https://naren-ui.github.io/urban-slider/demo2.html" />
 </head>
 <body>
