--- a/demo1.html
+++ b/demo1.html
@@ -17,7 +17,7 @@
 	<!-- Meta OG Details -->
 	<meta property="og:title" content="Urban Slider - Parallax Background"/>
 	<meta property="og:description" content="Demo 1 of Urban slider has the skewed background in the background image using swiper js. These skewed elements have nice parallax effect in slide change.">
-    <meta property="og:image" content="img/share/demo1.jpg" />
+    <meta property="og:image" content="https://naren-ui.github.io/urban-slider/img/share/demo1.jpg" />
     <meta property="og:url" content="https://naren-ui.github.io/urban-slider/demo1.html" />
 </head>
 <body>
