--- a/demo3.html
+++ b/demo3.html
@@ -17,7 +17,7 @@
 	<!-- Meta OG Details -->
 	<meta property="og:title" content="Urban Slider - With Content Transform"/>
 	<meta property="og:description" content="Demo 3 of Urban slider has custom effects using swiper js.">
-	<meta property="og:image" content="img/share/demo3.jpg" />
+	<meta property="og:image" content="https://naren-ui.github.io/urban-slider/img/share/demo3.jpg" />
 	<meta property="og:url" content="https://naren-ui.github.io/urban-slider/demo3.html" />
 </head>
 <body class="style-3">
