--- a/demo3.html
+++ b/demo3.html
@@ -92,14 +92,14 @@
 	<!-- KRDS Box Information -->
 	<div class="appInfo">
 		<nav class="boxActions">
-			<a href="https://krdsbox.github.io/gooey-loader/" id="previous_box" title="Previous box" target="_blank">
-				<img src="img/back-icon-b.svg" alt="back" />
+			<a id="previous_box" title="Previous box">
+				<img src="img/back-icon.svg" alt="back" />
 			</a>
-			<a href="https://github.com/krdsbox" id="box_home" title="Box home" target="_blank">
-				<img src="img/krdsbox-b.svg" alt="KRDS Box" />
+			<a id="box_home" title="Box home">
+				<img src="img/krdsbox.svg" alt="KRDS Box" />
 			</a>
-			<a href="https://github.com/krdsbox/urban-slider" id="github_repo" title="Github repo" target="_blank">
-				<img src="img/github-b.svg" alt="Github" />
+			<a id="github_repo" title="Github repo">
+				<img src="img/github.svg" alt="Github" />
 			</a>
 		</nav>
 		<h1>Urban Slider</h1>
